// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as active 1`] = `
<div
  className="sc-AxjAm caFkQs"
  name="tomato"
>
  <span>
    tomato
  </span>
</div>
`;

exports[`should render as inactive 1`] = `
<div
  className="sc-AxjAm YZIJc"
  name="tomato"
>
  <span>
    tomato
  </span>
</div>
`;
